--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,6 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_executable(JEAssetBundle src/main.cpp
         src/bundle.cpp
-        src/bundle.h)
+        src/bundle.h
+        src/debundle.cpp
+        src/debundle.h)
